--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/oneui.css">
 
-    <link href="assets/js/plugins/toastr/toastr.min.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="assets/js/plugins/toastr/toastr.min.css" />
     <!-- 组件拖拽编辑 gridstack -->
     <link rel="stylesheet" type="text/css" href="assets/js/plugins/gridstack.js/gridstack.css" />
     <link rel="stylesheet" type="text/css" href="assets/js/plugins/gridstack.js/gridstack-extra.css" />
