--- a/public/login.html
+++ b/public/login.html
@@ -18,6 +18,7 @@
  
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/oneui.css">
+    <link rel="stylesheet" type="text/css" href="assets/js/plugins/toastr/toastr.min.css" />
 
 </head>
 
@@ -29,6 +30,7 @@
     <script type="text/javascript" src="assets/js/core/jquery.min.js"></script>
     <script type="text/javascript" src="assets/js/core/bootstrap.min.js"></script>
  
+    <script type="text/javascript" src="assets/js/plugins/toastr/toastr.min.js"></script> 
     <!-- Page JS Code -->
     <script src="dist/login.js"></script>
 
