页面基本功能

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,11 @@
     <!-- image -->
     <link href="assets/js/plugins/fancybox-master/dist/jquery.fancybox.min.css" rel="stylesheet">
 
+    <!--datetimepicker-->
+    <!-- <link rel="stylesheet" href="assets/js/plugins/bootstrap-datepicker/bootstrap-datepicker3.min.css"> -->
+    <link rel="stylesheet" href="assets/js/plugins/bootstrap-datetimepicker/bootstrap-datetimepicker.min.css">
+
+
     <link rel="stylesheet" type="text/css" href="assets/css/common.css">
 </head>
 
@@ -52,7 +57,7 @@
     <script type="text/javascript" src="assets/js/core/jquery.placeholder.min.js"></script>
     <script type="text/javascript" src="assets/js/core/js.cookie.min.js"></script>
 
-    <script type="text/javascript" src="assets/js/plugins/toastr/toastr.min.js"></script> 
+    <script type="text/javascript" src="assets/js/plugins/toastr/toastr.min.js"></script>
 
     <script type="text/javascript" src="assets/js/plugins/datatables/datatables.js"></script>
 
@@ -66,6 +71,12 @@
 
     <!-- image -->
     <script src="assets/js/plugins/fancybox-master/dist/jquery.fancybox.min.js"></script>
+
+    <!--datetimepicker-->
+    <!-- <script src="assets/js/plugins/bootstrap-datepicker/bootstrap-datepicker.min.js"></script> -->
+    <script src="assets/js/plugins/bootstrap-datetimepicker/moment.min.js"></script>
+    <script src="assets/js/zh-cn.js"></script>
+    <script src="assets/js/plugins/bootstrap-datetimepicker/bootstrap-datetimepicker.min.js"></script>
 
     <script type="text/javascript" src="assets/js/common.js"></script>
     <!-- <script src="assets/js/table_data.js"></script>  -->
