更新直播预览

--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,13 @@
     <link rel="stylesheet" type="text/css" href="assets/js/plugins/datatables/datatables.css">
 
     <!-- image -->
-    <link href="assets/js/plugins/fancybox-master/dist/jquery.fancybox.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/js/plugins/fancybox-master/dist/jquery.fancybox.min.css">
+    <!-- image picker -->
+    <link rel="stylesheet" type="text/css" href="assets/plugins/imagepicker/css/image-picker.css"> 
 
     <!--datetimepicker-->
     <!-- <link rel="stylesheet" href="assets/js/plugins/bootstrap-datepicker/bootstrap-datepicker3.min.css"> -->
-    <link rel="stylesheet" href="assets/js/plugins/bootstrap-datetimepicker/bootstrap-datetimepicker.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/js/plugins/bootstrap-datetimepicker/bootstrap-datetimepicker.min.css">
 
 
     <link rel="stylesheet" type="text/css" href="assets/css/common.css">
@@ -72,8 +74,14 @@
     <!-- image -->
     <script src="assets/js/plugins/fancybox-master/dist/jquery.fancybox.min.js"></script>
 
+    <!-- image picker -->
+    <script src="assets/plugins/imagepicker/js/prettify.js" type="text/javascript"></script>
+    <script src="assets/plugins/imagepicker/js/jquery.masonry.min.js" type="text/javascript"></script>
+    <!-- <script src="assets/plugins/imagepicker/js/show_html.js" type="text/javascript"></script>  -->
+    <script src="assets/plugins/imagepicker/js/image-picker.min.js" type="text/javascript"></script>
+
+
     <!--datetimepicker-->
-    <!-- <script src="assets/js/plugins/bootstrap-datepicker/bootstrap-datepicker.min.js"></script> -->
     <script src="assets/js/plugins/bootstrap-datetimepicker/moment.min.js"></script>
     <script src="assets/js/zh-cn.js"></script>
     <script src="assets/js/plugins/bootstrap-datetimepicker/bootstrap-datetimepicker.min.js"></script>
