--- a/public/client.html
+++ b/public/client.html
@@ -19,32 +19,56 @@
     <link rel="shortcut icon" href="assets/img/favicons/favicon.png">
     <!-- END Icons -->
 
-  
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/js/plugins/toastr/toastr.min.css" />
     <!-- 组件拖拽编辑 gridstack -->
     <link rel="stylesheet" type="text/css" href="assets/js/plugins/gridstack.js/gridstack.css" />
     <link rel="stylesheet" type="text/css" href="assets/js/plugins/gridstack.js/gridstack-extra.css" />
     <!-- 组件拖拽编辑 gridstack -->
-  
+
+    <style type="text/css">
+        html,
+        body {
+            height: 100%;
+            overflow-x: hidden;
+            overflow-y: hidden;
+            background: #000;
+        }
+
+        .grid-stack {
+            background: #000;
+        }
+
+        .grid-stack-item-content {
+            color: #000;
+            text-align: center;
+            background-color: #000;
+        }
+    </style>
+
 </head>
 
 <body>
-    <div id="root" class="sidebar-l sidebar-o side-scroll header-navbar-fixed">
+    <div class="container-fluid" style="padding: 0px;">
+        <div class="grid-stack">
+        </div>
     </div>
- 
-    <script type="text/javascript" src="assets/js/core/jquery.min.js"></script> 
 
+    <script type="text/javascript" src="assets/js/core/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/js/core/bootstrap.min.js"></script>
     <script type="text/javascript" src="assets/js/plugins/toastr/toastr.min.js"></script>
- 
+
     <!-- 组件拖拽编辑 gridstack -->
     <script type="text/javascript" src="assets/js/plugins/jquery-ui/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.0/lodash.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.2.0/knockout-min.js"></script>
+    <script type="text/javascript" src="assets/js/plugins/gridstack/lodash.min.js"></script>
+    <script type="text/javascript" src="assets/js/plugins/gridstack/knockout-min.js"></script>
     <script type="text/javascript" src="assets/js/plugins/gridstack.js/gridstack.js"></script>
     <script type="text/javascript" src="assets/js/plugins/gridstack.js/gridstack.jQueryUI.js"></script>
     <!-- 组件拖拽编辑 gridstack -->
-  
-    <script src="client.js"></script>
+
+    <!-- <script type="text/javascript" src="assets/plugins/jquery.bootstrap.newsbox.js"></script> -->
+
+    <script type="text/javascript" src="client.js"></script>
 
 </body>
 
