--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <!-- image -->
     <link rel="stylesheet" type="text/css" href="assets/js/plugins/fancybox-master/dist/jquery.fancybox.min.css">
     <!-- image picker -->
-    <link rel="stylesheet" type="text/css" href="assets/plugins/imagepicker/css/image-picker.css"> 
+    <link rel="stylesheet" type="text/css" href="assets/plugins/imagepicker/css/image-picker.css">
 
     <!--datetimepicker-->
     <!-- <link rel="stylesheet" href="assets/js/plugins/bootstrap-datepicker/bootstrap-datepicker3.min.css"> -->
@@ -65,32 +65,32 @@
 
     <!-- 组件拖拽编辑 gridstack -->
     <script type="text/javascript" src="assets/js/plugins/jquery-ui/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.0/lodash.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.2.0/knockout-min.js"></script>
+    <script type="text/javascript" src="assets/js/plugins/gridstack/lodash.min.js"></script>
+    <script type="text/javascript" src="assets/js/plugins/gridstack/knockout-min.js"></script>
     <script type="text/javascript" src="assets/js/plugins/gridstack.js/gridstack.js"></script>
     <script type="text/javascript" src="assets/js/plugins/gridstack.js/gridstack.jQueryUI.js"></script>
     <!-- 组件拖拽编辑 gridstack -->
 
     <!-- image -->
-    <script src="assets/js/plugins/fancybox-master/dist/jquery.fancybox.min.js"></script>
+    <script type="text/javascript" src="assets/js/plugins/fancybox-master/dist/jquery.fancybox.min.js"></script>
 
     <!-- image picker -->
-    <script src="assets/plugins/imagepicker/js/prettify.js" type="text/javascript"></script>
-    <script src="assets/plugins/imagepicker/js/jquery.masonry.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="assets/plugins/imagepicker/js/prettify.js"></script>
+    <script type="text/javascript" src="assets/plugins/imagepicker/js/jquery.masonry.min.js"></script>
     <!-- <script src="assets/plugins/imagepicker/js/show_html.js" type="text/javascript"></script>  -->
-    <script src="assets/plugins/imagepicker/js/image-picker.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="assets/plugins/imagepicker/js/image-picker.min.js"></script>
 
 
     <!--datetimepicker-->
-    <script src="assets/js/plugins/bootstrap-datetimepicker/moment.min.js"></script>
-    <script src="assets/js/zh-cn.js"></script>
-    <script src="assets/js/plugins/bootstrap-datetimepicker/bootstrap-datetimepicker.min.js"></script>
+    <script type="text/javascript" src="assets/js/plugins/bootstrap-datetimepicker/moment.min.js"></script>
+    <script type="text/javascript" src="assets/js/zh-cn.js"></script>
+    <script type="text/javascript" src="assets/js/plugins/bootstrap-datetimepicker/bootstrap-datetimepicker.min.js"></script>
 
     <script type="text/javascript" src="assets/js/common.js"></script>
     <!-- <script src="assets/js/table_data.js"></script>  -->
 
     <!-- Page JS Code -->
-    <script src="dist/index.js"></script>
+    <script type="text/javascript" src="dist/index.js"></script>
 
 </body>
 
