--- a/public/client.html
+++ b/public/client.html
@@ -94,7 +94,7 @@
         <div class="grid-stack">
         </div>
         <div class="servermsg">
-            <h4 id="message"></h4>
+            <h4 id="message" style="font-weight: bold;"></h4>
         </div>
     </div>
 
