--- a/public/client.html
+++ b/public/client.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" type="text/css" href="assets/js/plugins/gridstack.js/gridstack.css" />
     <link rel="stylesheet" type="text/css" href="assets/js/plugins/gridstack.js/gridstack-extra.css" />
     <!-- 组件拖拽编辑 gridstack -->
- 
+
     <!-- <link href="assets/plugins/video.js/video-js.css" rel="stylesheet"> -->
 
     <style type="text/css">
@@ -49,6 +49,14 @@
             top: 1rem;
             font-weight: bold;
             color: #ea192d;
+        }
+
+        .info {
+            font-weight: bold;
+            color: #fff;
+            /* padding-top: 100px; */
+            text-align: center;
+            position: absolute;
         }
 
         @keyframes servermsg {
@@ -95,6 +103,9 @@
     <div class="container-fluid" style="padding: 0px;">
         <div class="grid-stack">
         </div>
+
+        <h4 id="info" class="info"></h4>
+
         <div class="servermsg">
             <h4 id="message" style="font-weight: bold;"></h4>
         </div>
@@ -112,7 +123,7 @@
     <script type="text/javascript" src="assets/js/plugins/gridstack.js/gridstack.jQueryUI.js"></script>
     <!-- 组件拖拽编辑 gridstack -->
 
-    <script src="assets/plugins/flv.js/dist/flv.min.js"></script> 
+    <script src="assets/plugins/flv.js/dist/flv.min.js"></script>
 
     <!-- <script type="text/javascript" src="assets/plugins/jquery.bootstrap.newsbox.js"></script> -->
 
