--- a/public/client.html
+++ b/public/client.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-<!--[if IE 9]>         <html class="ie9 no-focus" lang="en"> <![endif]-->
-<!--[if gt IE 9]><!-->
-<html class="no-focus" lang="en">
-<!--<![endif]-->
+<html>
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
 
     <title>鸿天科技 - 广告机直播系统 </title>
 
@@ -13,6 +10,9 @@
     <meta name="author" content="pixelcave">
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta http-equiv="Cache-Control" content="no-store"/>  
+    <meta http-equiv="Pragma" content="no-cache"/>  
+    <meta http-equiv="Expires" content="0"/> 
 
     <!-- Icons -->
     <!-- The following icons can be replaced with your own, they are used by desktop and mobile browsers -->
@@ -44,8 +44,8 @@
             text-align: left;
             position: absolute;
             overflow: hidden;
-            -webkit-animation: servermsg 10s linear infinite;
-            animation: servermsg 10s linear infinite;
+            -webkit-animation: servermsg 24s linear infinite;
+            animation: servermsg 24s linear infinite;
             top: 1rem;
             font-weight: bold;
             color: #ea192d;
@@ -61,7 +61,7 @@
 
         @keyframes servermsg {
             0% {
-                transform: translateX(-100%);
+                transform: translateX(-90%);
             }
             100% {
                 transform: translateX(100%);
@@ -76,8 +76,8 @@
 
         .carousel-vertical .carousel-inner .active.carousel-item-left,
         .carousel-vertical .carousel-inner .carousel-item-prev {
-            -webkit-transform: translateY(-100%);
-            transform: translateY(-100%);
+            -webkit-transform: translateY(-90%);
+            transform: translateY(-9%);
         }
 
         .carousel-vertical .carousel-inner .active.carousel-item-right,
