--- a/public/live_pre.html
+++ b/public/live_pre.html
@@ -6,6 +6,10 @@
     <title>鸿天科技 - 广告机直播系统</title>
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta http-equiv="Cache-Control" content="no-store"/>  
+    <meta http-equiv="Pragma" content="no-cache"/>  
+    <meta http-equiv="Expires" content="0"/> 
+    
 </head>
 
 <body>
