--- a/public/login.html
+++ b/public/login.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-<!--[if IE 9]>         <html class="ie9 no-focus" lang="en"> <![endif]-->
-<!--[if gt IE 9]><!-->
-<html class="no-focus" lang="en">
-<!--<![endif]-->
+<html>
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
 
     <title>鸿天科技 - 广告机直播系统 - 登录 </title>
 
@@ -13,7 +10,10 @@
     <meta name="author" content="pixelcave">
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
- 
+    <meta http-equiv="Cache-Control" content="no-store"/>  
+    <meta http-equiv="Pragma" content="no-cache"/>  
+    <meta http-equiv="Expires" content="0"/> 
+
     <link rel="shortcut icon" href="assets/img/favicons/favicon.png"> 
  
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
@@ -33,6 +33,6 @@
     <script type="text/javascript" src="assets/js/plugins/toastr/toastr.min.js"></script> 
   
 
-<script type="text/javascript" src="dist/login.js?6e4b6b60fda1a09bcaef"></script></body>
+<script type="text/javascript" src="dist/login.js?c56ee34422d0d770ed1c"></script></body>
 
 </html>
