--- a/public/client.html
+++ b/public/client.html
@@ -10,9 +10,9 @@
     <meta name="author" content="pixelcave">
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta http-equiv="Cache-Control" content="no-store"/>  
-    <meta http-equiv="Pragma" content="no-cache"/>  
-    <meta http-equiv="Expires" content="0"/> 
+    <meta http-equiv="Cache-Control" content="no-store" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
 
     <!-- Icons -->
     <!-- The following icons can be replaced with your own, they are used by desktop and mobile browsers -->
@@ -35,6 +35,13 @@
             overflow-x: hidden;
             overflow-y: hidden;
             background: #000;
+        }
+
+        ul,
+        li {
+            padding: 0;
+            margin: 0;
+            list-style: none
         }
 
         .servermsg {
