替换NodePlayer正式版本

--- a/public/client.html
+++ b/public/client.html
@@ -164,7 +164,7 @@
     <!-- 组件拖拽编辑 gridstack -->
 
     <script src="assets/plugins/flv.js/dist/flv.min.js"></script>
-    <script src="NodePlayer.js"></script>
+    <script src="NodePlayer.min.js"></script>
     <!-- <script type="text/javascript" src="assets/plugins/jquery.bootstrap.newsbox.js"></script> -->
 
     <script type="text/javascript" src="client.js"></script>
