--- a/public/client.html
+++ b/public/client.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>直播推送系统</title>
+    <title>  </title>
 
     <meta name="description" content="鸿天科技 - 广告机直播系统">
     <meta name="author" content="pixelcave">
